# lm-arch-ht4

./: .gitignore  CHANGELOG.md  README.md  device.py  lora.ipynb  pyproject.toml  requirements.txt  tiny_moe_lm.ipynb  week4_dt_tiny_moe_lm_orig.ipynb
docs/: lora-from-scratch.md  moe.md  nebius-remote-runs.md  rope.md  tiny-moe-lm.md
notebooks/: homework_lora_orig.ipynb  lora.ipynb  tiny_moe_lm.ipynb  tiny_moe_lm_nebius_cloud_run.ipynb  week4_dt_tiny_moe_lm_orig.ipynb
scripts/: nebius-pull.sh  nebius-remote-run.sh  nebius-run.sh  nebius-shell.sh  nebius.env.example
src/: run_logging.py
