[project]
name = "lm-arch-ht4"
version = "0.1.0"
description = "LLM architecture experiments with LoRA, RoPE, and Mixture-of-Experts notebooks."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "accelerate>=0.27",
    "datasets>=2.18",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "peft>=0.10",
    "requests>=2.31",
    "torch>=2.4",
    "transformers>=4.40",
]

[tool.uv]
package = false

